@@ -1,3 +1,9 @@
+2001-03-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* SI fixes:  Claw works in Knight's test.  Dead wolf gets correct
+	body.  Usecode function with eventid=7 called when NPC dies.
+	* Also fixed bug where NPC's keep opening/closing shutters.
+
 2001-03-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* gumps/gump_utils.h: added a few includes for OpenBSD
 	* configure.in: added a ton of libraries for OpenBSD build
